Added test files with large qty of objects and created  a working endpoint that receive a gzipped json
